--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "normalize.css": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -14,9 +17,13 @@
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^4.3.5",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^1.2.0"
+    "postcss-simple-vars": "^1.2.0",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-command": "^0.4.1"
   }
 }
