--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^4.1.0",
     "normalize.css": "^4.1.1",
+    "picturefill": "^3.0.2",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
@@ -16,9 +17,11 @@
     "browser-sync": "^2.24.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^3.0.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.4.0",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^4.3.5",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
